tests/parser/bug_78/invalid_9.m.out
In invalid_9.m, line 4
| disp foo'
|         ^ lex error: this command form string is not terminated properly
In invalid_9.m, line 4
| disp foo'
|      ^^^^ style: end statement with a semicolon [end_of_statements]
----------------------------------------------------------------------
--  Parse tree for invalid_9.m
Root: Script_File
  Statements: Sequence_Of_Statements
    Statements: Naked_Expression_Statement
      Expression: Command form Function_Call
        Name: Identifier <disp>
        Arguments: Char_Array_Literal 'foo'
----------------------------------------------------------------------
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
